--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(1).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-001.webp 1x, ./images/project-desktop-@2x-001.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-001.jpg 1x, ./images/project-desktop-@2x-001.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-001.webp 1x, ./images/project-tablet-@2x-001.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-001.jpg 1x, ./images/project-tablet-@2x-001.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-001.webp 1x, ./images/project-mobile-@2x-001.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-001.jpg 1x, ./images/project-mobile-@2x-001.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-001.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                                     </p>
@@ -80,7 +94,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(2).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-002.webp 1x, ./images/project-desktop-@2x-002.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-002.jpg 1x, ./images/project-desktop-@2x-002.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-002.webp 1x, ./images/project-tablet-@2x-002.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-002.jpg 1x, ./images/project-tablet-@2x-002.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-002.webp 1x, ./images/project-mobile-@2x-002.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-002.jpg 1x, ./images/project-mobile-@2x-002.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-002.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -96,7 +124,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(3).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-003.webp 1x, ./images/project-desktop-@2x-003.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-003.jpg 1x, ./images/project-desktop-@2x-003.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-003.webp 1x, ./images/project-tablet-@2x-003.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-003.jpg 1x, ./images/project-tablet-@2x-003.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-003.webp 1x, ./images/project-mobile-@2x-003.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-003.jpg 1x, ./images/project-mobile-@2x-003.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-003.jpg" alt="фото проекту">
+                                </picture>                                
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -112,7 +154,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(4).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-004.webp 1x, ./images/project-desktop-@2x-004.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-004.jpg 1x, ./images/project-desktop-@2x-004.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-004.webp 1x, ./images/project-tablet-@2x-004.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-004.jpg 1x, ./images/project-tablet-@2x-004.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-004.webp 1x, ./images/project-mobile-@2x-004.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-004.jpg 1x, ./images/project-mobile-@2x-004.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-004.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -128,7 +184,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(5).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-005.webp 1x, ./images/project-desktop-@2x-005.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-005.jpg 1x, ./images/project-desktop-@2x-005.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-005.webp 1x, ./images/project-tablet-@2x-005.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-005.jpg 1x, ./images/project-tablet-@2x-005.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-005.webp 1x, ./images/project-mobile-@2x-005.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-005.jpg 1x, ./images/project-mobile-@2x-005.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-005.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -144,7 +214,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(6).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-006.webp 1x, ./images/project-desktop-@2x-006.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-006.jpg 1x, ./images/project-desktop-@2x-006.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-006.webp 1x, ./images/project-tablet-@2x-006.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-006.jpg 1x, ./images/project-tablet-@2x-006.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-006.webp 1x, ./images/project-mobile-@2x-006.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-006.jpg 1x, ./images/project-mobile-@2x-006.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-006.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -160,7 +244,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(7).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-007.webp 1x, ./images/project-desktop-@2x-007.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-007.jpg 1x, ./images/project-desktop-@2x-007.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-007.webp 1x, ./images/project-tablet-@2x-007.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-007.jpg 1x, ./images/project-tablet-@2x-007.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-007.webp 1x, ./images/project-mobile-@2x-007.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-007.jpg 1x, ./images/project-mobile-@2x-007.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-007.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -176,7 +274,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(8).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-008.webp 1x, ./images/project-desktop-@2x-008.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-008.jpg 1x, ./images/project-desktop-@2x-008.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-008.webp 1x, ./images/project-tablet-@2x-008.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-008.jpg 1x, ./images/project-tablet-@2x-008.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-008.webp 1x, ./images/project-mobile-@2x-008.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-008.jpg 1x, ./images/project-mobile-@2x-008.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-008.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -192,7 +304,21 @@
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <div class="project-wrapper">
-                                <img src="./images/img-2(9).png" width="370" height="294" alt="фото проекту">
+                                <picture>
+                                    <source srcset="./images/project-desktop-009.webp 1x, ./images/project-desktop-@2x-009.webp 2x,"
+                                        media="(min-width: 1200px)" type="image/webp" />
+                                    <source srcset="./images/project-desktop-009.jpg 1x, ./images/project-desktop-@2x-009.jpg 2x,"
+                                        media="(min-width: 1200px)" />
+                                    <source srcset="./images/project-tablet-009.webp 1x, ./images/project-tablet-@2x-009.webp 2x,"
+                                        media="(min-width: 768px)" type="image/webp" />
+                                    <source srcset="./images/project-tablet-009.jpg 1x, ./images/project-tablet-@2x-009.jpg 2x,"
+                                        media="(min-width: 768px)" />
+                                    <source srcset="./images/project-mobile-009.webp 1x, ./images/project-mobile-@2x-009.webp 2x,"
+                                        media="(max-width: 767px)" type="image/webp" />
+                                    <source srcset="./images/project-mobile-009.jpg 1x, ./images/project-mobile-@2x-009.jpg 2x,"
+                                        media="(max-width: 767px)" />
+                                    <img src="./images/project-mobile-009.jpg" alt="фото проекту">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                         це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
