--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                     </li>
                 </ul>
             </nav>
+            <button type="button" class="mobile-menu-btn" data-menu-open>
+                <svg class="mobile-menu-btn__icon" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-menu-burger"></use>
+                </svg>
+            </button>
             <ul class="contacts-list list">
                 <li class="contact-list__item">
                     <a class="contact-list__information link" href="mailto:info@devstudio.com">
@@ -46,6 +51,46 @@
                     </a>
                 </li>
             </ul>
+        </div>
+        <!-- Mobile menu -->
+        <div class="mobile-menu" data-menu>
+            <div class="container mobile-menu-container">
+                <button type="button" class="mobile-menu__close-btn" data-menu-close>
+                    <svg class="mobile-menu__close-icon" width="18" height="18">
+                        <use href="./images/sprite.svg#close-icon-2"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu__navigation">
+                    <li class="mobile-menu__nav-list mobile-menu__nav-list-accent list">Студія</li>
+                    <li class="mobile-menu__nav-list list">Портфоліо</li>
+                    <li class="mobile-menu__nav-list list">Контакти</li>
+                </ul>
+                <ul class="mobile-menu__contacts">
+                    <li class="mobile-menu__contact-list list">
+                        <a class="mobile-menu__contact-mail link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mobile-menu__contact-list list">
+                        <a class="mobile-menu__contact-tel link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu__links">
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">Instagram</a>
+                        <span class="mobile-menu__line">|</span>
+                    </li>
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">Twitter</a>
+                        <span class="mobile-menu__line">|</span>
+                    </li>
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">Facebook</a>
+                        <span class="mobile-menu__line">|</span>
+                    </li>
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -104,15 +149,33 @@
                 <h2 class="subtitle">Чим ми займаємося</h2>
                 <ul class="feature-list__photos">
                     <li class="feature-list__photo list">
-                        <img src="./images/img_001.jpg" alt="робочі інструменти">
+                        <picture>
+                            <source srcset="./images/service-desktop-001.webp 1x, ./images/service-desktop-@2x-001.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/service-desktop-001.jpg 1x, ./images/service-desktop-@2x-001.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <img src="./images/service-desktop-001.jpg" alt="робочі інструменти">
+                        </picture>
                         <strong class="feature-list__signature">Десктопні додатки</strong>
                     </li>
                     <li class="feature-list__photo list">
-                        <img src="./images/img_002.jpg" alt="робочі інструменти">
+                        <picture>
+                            <source srcset="./images/service-desktop-002.webp 1x, ./images/service-desktop-@2x-002.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/service-desktop-002.jpg 1x, ./images/service-desktop-@2x-002.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <img src="./images/service-desktop-002.jpg" alt="робочі інструменти">
+                        </picture>
                         <strong class="feature-list__signature">Мобільні додатки</strong>
                     </li>
                     <li class="feature-list__photo list">
-                        <img src="./images/img_003.jpg" alt="робочі інструменти">
+                        <picture>
+                            <source srcset="./images/service-desktop-003.webp 1x, ./images/service-desktop-@2x-003.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/service-desktop-003.jpg 1x, ./images/service-desktop-@2x-003.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <img src="./images/service-desktop-003.jpg" alt="робочі інструменти">
+                        </picture>
                         <strong class="feature-list__signature">Дизайнерські рішення</strong>
                     </li>
                 </ul>
@@ -124,7 +187,21 @@
                 <h2 class="subtitle">Наша команда</h2>
                 <ul class="about-team">
                     <li class="about-team__items list">
-                        <img src="./images/img-1(1).jpg" width="270" alt="команда">
+                        <picture>
+                            <source srcset="./images/emloyer-desktop-001.webp 1x, ./images/emloyer-desktop-@2x-001.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/emloyer-desktop-001.jpg 1x, ./images/emloyer-desktop-@2x-001.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/emloyer-tablet-001.webp 1x, ./images/emloyer-tablet-@2x-001.webp 2x,"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source srcset="./images/emloyer-tablet-001.jpg 1x, ./images/emloyer-tablet-@2x-001.jpg 2x,"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/emloyer-mobile-001.webp 1x, ./images/emloyer-mobile-@2x-001.webp 2x,"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/emloyer-mobile-001.jpg 1x, ./images/emloyer-mobile-@2x-001.jpg 2x,"
+                                media="(max-width: 767px)" />
+                            <img src="./images/emloyer-mobile-001.jpg" alt="команда">
+                        </picture>
                         <div class="about-team__text">
                             <h3 class="about-team__name">Ігор Дем'яненко</h3>
                             <p class="about-team__item">Product Designer</p>
@@ -161,7 +238,21 @@
                         </div>
                     </li>
                     <li class="about-team__items list">
-                        <img src="./images/img-1(2).jpg" width="270" alt="команда">
+                        <picture>
+                            <source srcset="./images/emloyer-desktop-002.webp 1x, ./images/emloyer-desktop-@2x-002.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/emloyer-desktop-002.jpg 1x, ./images/emloyer-desktop-@2x-002.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/emloyer-tablet-002.webp 1x, ./images/emloyer-tablet-@2x-002.webp 2x,"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source srcset="./images/emloyer-tablet-002.jpg 1x, ./images/emloyer-tablet-@2x-002.jpg 2x,"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/emloyer-mobile-002.webp 1x, ./images/emloyer-mobile-@2x-002.webp 2x,"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/emloyer-mobile-002.jpg 1x, ./images/emloyer-mobile-@2x-002.jpg 2x,"
+                                media="(max-width: 767px)" />
+                            <img src="./images/emloyer-mobile-002.jpg" alt="команда">
+                        </picture>
                         <div class="about-team__text">
                             <h3 class="about-team__name">Ольга Рєпіна</h3>
                             <p class="about-team__item">Frontend Developer</p>
@@ -198,7 +289,21 @@
                         </div>
                     </li>
                     <li class="about-team__items list">
-                        <img src="./images/img-1(3).jpg" width="270" alt="команда">
+                        <picture>
+                            <source srcset="./images/emloyer-desktop-003.webp 1x, ./images/emloyer-desktop-@2x-003.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/emloyer-desktop-003.jpg 1x, ./images/emloyer-desktop-@2x-003.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/emloyer-tablet-003.webp 1x, ./images/emloyer-tablet-@2x-003.webp 2x,"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source srcset="./images/emloyer-tablet-003.jpg 1x, ./images/emloyer-tablet-@2x-003.jpg 2x,"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/emloyer-mobile-003.webp 1x, ./images/emloyer-mobile-@2x-003.webp 2x,"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/emloyer-mobile-003.jpg 1x, ./images/emloyer-mobile-@2x-003.jpg 2x,"
+                                media="(max-width: 767px)" />
+                            <img src="./images/emloyer-mobile-003.jpg" alt="команда">
+                        </picture>
                         <div class="about-team__text">
                             <h3 class="about-team__name">Микола Тарасов</h3>
                             <p class="about-team__item">Marketing</p>  
@@ -235,7 +340,21 @@
                         </div>
                     </li>
                     <li class="about-team__items list">
-                        <img src="./images/img-1(4).jpg" width="270" alt="команда">
+                        <picture>
+                            <source srcset="./images/emloyer-desktop-004.webp 1x, ./images/emloyer-desktop-@2x-004.webp 2x,"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/emloyer-desktop-004.jpg 1x, ./images/emloyer-desktop-@2x-004.jpg 2x,"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/emloyer-tablet-004.webp 1x, ./images/emloyer-tablet-@2x-004.webp 2x,"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source srcset="./images/emloyer-tablet-004.jpg 1x, ./images/emloyer-tablet-@2x-004.jpg 2x,"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/emloyer-mobile-004.webp 1x, ./images/emloyer-mobile-@2x-004.webp 2x,"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/emloyer-mobile-004.jpg 1x, ./images/emloyer-mobile-@2x-004.jpg 2x,"
+                                media="(max-width: 767px)" />
+                            <img src="./images/emloyer-mobile-004.jpg" alt="команда">
+                        </picture>
                         <div class="about-team__text">
                             <h3 class="about-team__name">Михайло Єрмаков</h3>
                             <p class="about-team__item">UI Designer</p> 
@@ -439,6 +558,9 @@
         </div>
     </div>
 
+
+
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
